--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,20 +1,26 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
+  color: $dark-grey;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
+  line-height: 1.6;
 }
 
-button{
+button {
   cursor: pointer;
 }
 
-button:disabled{
+button:disabled {
   cursor: default;
 }
 
-.is-active{
+.is-active {
   font-weight: bold;
 }
